--- a/projects/mi-web/index.html
+++ b/projects/mi-web/index.html
@@ -14,7 +14,7 @@
       que conecta a los usuarios con información relevante en la web.
    </p>
 
-   <img src="images/logo-google.png" alt="Logo de Google" width="300">
+   <img src="images/logo-google.png" onclick="cambiarImg()" alt="Logo de Google" width="300">
 
    <p>
       Sumérgete en la eficacia del motor de búsqueda más utilizado en todo el mundo.
@@ -37,7 +37,7 @@
       <li>Android</li>
    </ul>
 
-   <button>Nuevo nombre de usuario</button>
+   <button onclick="enviarNombreUsuario()">Nuevo nombre de usuario</button>
 
    <script src="scripts/main.js"></script>
 </body>
